--- a/package.json
+++ b/package.json
@@ -28,9 +28,12 @@
     "gatsby-plugin-sitemap": "^4.0.0",
     "gatsby-source-filesystem": "^3.4.0",
     "gatsby-transformer-sharp": "^3.4.0",
+    "grommet": "^2.17.2",
+    "grommet-icons": "^4.5.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
-    "sass": "^1.32.12"
+    "sass": "^1.32.12",
+    "styled-components": "^5.3.0"
   }
 }
