--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
         "gatsby": "^3.6.1",
         "gatsby-plugin-google-analytics": "^3.4.0",
         "gatsby-plugin-image": "^1.4.1",
-        "gatsby-plugin-manifest": "^3.4.0",
+        "gatsby-plugin-manifest": "^3.10.0",
         "gatsby-plugin-mdx": "^2.4.0",
         "gatsby-plugin-minify": "^0.4.0",
+        "gatsby-plugin-offline": "^4.10.0",
         "gatsby-plugin-react-helmet": "^4.4.0",
+        "gatsby-plugin-robots-txt": "^1.6.8",
         "gatsby-plugin-sass": "^4.4.0",
         "gatsby-plugin-sitemap": "^4.0.0",
         "gatsby-plugin-styled-components": "^4.6.0",
